clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/destinationrule/egress-zufardhiyaulhaq-dev-egress-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egress-zufardhiyaulhaq-dev-egress-dr
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: egress-zufardhiyaulhaq-dev-mtls-healthcheck-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: UPGRADE
      tls:
        mode: ISTIO_MUTUAL
        sni: egress.zufardhiyaulhaq.dev
  - name: egress-zufardhiyaulhaq-dev-mtls-api-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: DO_NOT_UPGRADE
      tls:
        mode: ISTIO_MUTUAL
        sni: egress.zufardhiyaulhaq.dev
