clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/destinationrule/helloworld-zufardhiyaulhaq-dev-mesh-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-zufardhiyaulhaq-dev-mesh-dr
  namespace: istio-system
spec:
  host: helloworld.zufardhiyaulhaq.dev
  subsets:
  - name: healthcheck-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: UPGRADE
  - name: api-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: DO_NOT_UPGRADE
  - name: https-healthcheck-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: UPGRADE
      tls:
        mode: SIMPLE
        sni: helloworld.zufardhiyaulhaq.dev
  - name: https-api-route
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: DO_NOT_UPGRADE
      tls:
        mode: SIMPLE
        sni: helloworld.zufardhiyaulhaq.dev
