clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/destinationrule/server-mtls-zufardhiyaulhaq-dev-mesh-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-mesh-dr
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: server-mtls-zufardhiyaulhaq-dev
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: server.mtls.zufardhiyaulhaq.dev
