clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/destinationrule/server-mtls-zufardhiyaulhaq-dev-mtls-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-mtls-dr
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: server-mtls-zufardhiyaulhaq-dev-mtls
    trafficPolicy:
      connectionPool:
        http:
          idleTimeout: 10s
          h2UpgradePolicy: DO_NOT_UPGRADE
      tls:
        mode: ISTIO_MUTUAL
        sni: server.mtls.zufardhiyaulhaq.dev
