clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/destinationrule/server-mtls-zufardhiyaulhaq-dev-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-origin-mtls
  namespace: istio-system
spec:
  host: server.mtls.zufardhiyaulhaq.dev
  subsets:
  - name: tls-origination
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: client-mtls-zufardhiyaulhaq-dev-cert
          sni: server.mtls.zufardhiyaulhaq.dev
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-redirect-mtls
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: server-mtls-zufardhiyaulhaq-dev
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: server.mtls.zufardhiyaulhaq.dev
